# in-class-2024

./: .gitignore  recitation-1-26.py
apr-14-interactive-viz/: InteractiveCharts.ipynb
apr-17-packages/packaging_tutorial/: LICENSE  README.md  pyproject.toml
apr-17-packages/packaging_tutorial/tests/: test_example.py
apr-3-wordle-vis/: README.md  WordleViz.ipynb
feb-1-design/: readme
feb-12-debugging/: find_the_bug.py
feb-14-pandas/: Kitty'sSolution.ipynb  exercises.md  in-class.py  solution.py
feb-18-jupyter/: clean_worldle_player.ipynb  clear_worldle_player.ipynb  world_guesser.ipynb
feb-22-jupyter/: exercise.md
feb-28-collab/: README-kpierrel.md  README-mcd2.md  README.md
feb-3-Dicts/: wordle.py
feb-7-testing/: README.md  wordle_parts.py  wordle_parts_test.py
feb-8-testing/: wordle.py  wordle_inclass_test.py
jan-17-VCS-Demo/: firstday.txt
jan-24-files/: PresidentSolution_Kitty.py  README.md  presidents.csv  presidents.json  solution.py  workedExample.py
jan-25-files/: README.md  constitutional_amendments.csv  constitutional_amendments.json
jan-27-paths/: README.md
jan-29-paths/: Jan-31_class.py  Kitty'sSolution.ipynb  README.md  presidents.csv  presidents.json  solution1-29.py  step3FromJan24JoshSolution.py  step51-29.py  step6.py  workedExample.py
mar-11-pbt/: resources.md  wordle_parts_test.py  wordle_parts_test_solution.py
mar-13-pbt/: wordle_parts.py  wordle_parts_test.py  wordle_parts_test_solution.py
mar-15-transforms/: StarterNotebook.ipynb
mar-18-vis/: Example.ipynb  README.md  altair_tutorial.ipynb  ch2.ipynb  chart.html  (+1 more)
(+23 files in other folders)
